--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -8,7 +8,7 @@
   <body>
     <% if (currentUser) { %>
     <h1>Hello, <%= currentUser.username %></h1>
-    <% } else { %>
+    <%- include("./partials/fileUpload.ejs")%> <% } else { %>
     <h1>Please login</h1>
     <a href="/login">log in</a>
     <% } %>
