--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -9,7 +9,13 @@
     <% if (currentUser) { %>
     <h1>Hello, <%= currentUser.username %></h1>
     <%- include("./partials/createFolder.ejs") %> <%-
-    include("./partials/fileUpload.ejs")%> <% } else { %>
+    include("./partials/fileUpload.ejs") %>
+    <ul>
+      <% folders.map((folder)=> { %>
+      <li><%= folder.name %></li>
+      <% }) %>
+    </ul>
+    <% } else { %>
     <h1>Please login</h1>
     <a href="/login">log in</a>
     <% } %>
