--- a/views/partials/createFolder.ejs
+++ b/views/partials/createFolder.ejs
@@ -1,5 +1,7 @@
 <div class="create-folder-container">
   <form action="/folder/new" method="post">
+    <label for="folder_name">Folder Name:</label>
+    <input type="text" id="folder_name" name="folder_name" required />
     <button type="submit">New Folder</button>
   </form>
 </div>
