--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -10,12 +10,7 @@
     <h1>Hello, <%= currentUser.username %></h1>
     <%- include("./partials/createFolder.ejs") %> <%-
     include("./partials/fileUpload.ejs") %>
-    <ul>
-      <% folders.map((folder)=> { %>
-      <li><%= folder.name %></li>
-      <% }) %>
-    </ul>
-    <% } else { %>
+    <%-include("./partials/listAllUserFolders.ejs") %> <% } else { %>
     <h1>Please login</h1>
     <a href="/login">log in</a>
     <% } %>
