--- a/views/folderView.ejs
+++ b/views/folderView.ejs
@@ -6,7 +6,14 @@
     <title><%= folderName %></title>
 </head>
 <body>
-    <h1><%= folderName %></h1>
-    <p> <%= folderId %></p>
+    <h1> <%= folderName %> </h1>
+    <div class="rename-container">
+        <form action=<%=`rename`%> method="post" >
+            <label for="folder_name">Rename folder: </label>
+            <input type="text" id="folder_name" name="folder_name" placeholder=<%= folderName %> >
+            <button type="submit">Update</button>
+        </form>
+    </div>
+    <p>  <%= folderId %> </p>
 </body>
 </html>
