--- a/views/partials/fileUpload.ejs
+++ b/views/partials/fileUpload.ejs
@@ -1,5 +1,5 @@
 <div class="file-upload-container">
-  <form action="/" method="post" enctype="multipart/form-data">
+  <form action="/file/upload" method="post" enctype="multipart/form-data">
     <input type="file" name="file" id="file" />
     <button type="submit">Upload</button>
   </form>
