--- a/views/partials/fileUpload.ejs
+++ b/views/partials/fileUpload.ejs
@@ -1,5 +1,6 @@
 <div class="file-upload-container">
-  <form action="/file/upload" method="post" enctype="multipart/form-data">
+  <form action=<%-`/folder/${folderId}/upload`%> method="post" enctype="multipart/form-data">
+    <label for="file">Upload a file</label>
     <input type="file" name="file" id="file" />
     <button type="submit">Upload</button>
   </form>
