Add CRUD operations for folders

--- a/views/partials/listAllFolderFiles.ejs
+++ b/views/partials/listAllFolderFiles.ejs
@@ -1,12 +1,16 @@
-<% if (files.length != 0) { %> 
+<% if (files) { %> 
         <ul class="files-container">
             <% files.map((file) => { %>
-                <% console.log(file.id) %>
                 <li class="file-item"> 
                     <a href=<%=`/file/${file.id}/download`%> class="file-item-content">
+                        <i data-lucide="file" class="icon"></i>
                         <%= file.name %>
                     </a> 
                 </li>
             <%  }) %>
         </ul>
 <% } %>
+<script src="https://unpkg.com/lucide@latest"></script>
+    <script>
+      lucide.createIcons();
+    </script>
