--- a/views/folderView.ejs
+++ b/views/folderView.ejs
@@ -3,18 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles.css">
     <title><%= folderName %></title>
 </head>
 <body>
-    <h1> <%= folderName %> </h1>
-    <div class="rename-container">
+    <%- include("./partials/navbar.ejs") %>
+    <div class="header-container">
+        <h1> 
+            <i data-lucide="folder" class="icon"></i>
+            <%= folderName %> 
+        </h1>
+        <div class="header-btns-container">
+            <form action="delete" method="post" onsubmit="return confirm('Do you really want to delete this folder including all of its files?');">
+                <button class="delete-folder-btn" type="submit">
+                    <i data-lucide="folder-x" class="icon"></i>
+                </button>
+            </form>
+            
+            <button class="rename-folder-btn" onclick="openModal(1)">
+                <i data-lucide="folder-pen" class="icon"></i>
+            </button>
+            <button class="upload-file-btn" onclick="openModal(2)">
+                <i data-lucide="file-up" class="icon"></i>
+            </button>
+        </div>
+    </div>
+
+    <!-- Modal Structure -->
+  <div id="dialog" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal(1)">&times;</span>
+      <h2>Rename "<%- folderName %>"</h2>
+      <div class="rename-container">
         <form action=<%=`rename`%> method="post">
-            <label for="folder_name">Rename folder: </label>
-            <input type="text" id="folder_name" name="folder_name" placeholder=<%= folderName %> >
+            <input type="text" id="folder_name" name="folder_name" value=<%= folderName %> >
             <button type="submit">Update</button>
         </form>
     </div>
-    <%- include("./partials/fileUpload.ejs") %>
+    </div>
+  </div>
+
+  <div id="dialog2" class="modal">
+    <div class="modal-content">
+      <span class="close" onclick="closeModal(2)">&times;</span>
+      <h2>Upload Your file to "<%- folderName %>"</h2>
+      <%- include("./partials/fileUpload.ejs") %>
+    </div>
+  </div>
+    
     <%- include("./partials/listAllFolderFiles.ejs") %>
 </body>
+<script src="https://unpkg.com/lucide@latest"></script>
+<script>lucide.createIcons(); </script>
+  <script src="/scripts.js"></script> 
 </html>
