--- a/views/homePage.ejs
+++ b/views/homePage.ejs
@@ -3,17 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="/styles.css">
     <title>Home</title>
   </head>
   <body>
+    <%- include("./partials/navbar.ejs") %>
     <% if (currentUser) { %>
     <h1>Hello, <%= currentUser.username %></h1>
     <h2>Folders</h2>
         <%- include("./partials/createFolder.ejs") %> 
         <%-include("./partials/listAllUserFolders.ejs") %> 
-    <h2>Files</h2>
-        <%- // include("./partials/fileUpload.ejs") %> 
-        <p>Coming soon! - Files will be listed here</p>
+    <h2>All Files</h2>
+        <%- include("./partials/listAllFolderFiles.ejs") %>
     <% } else { %>
     <h1>Please login</h1>
     <a href="/login">log in</a>
