--- a/public/styles.css
+++ b/public/styles.css
@@ -1,17 +1,95 @@
+@font-face {
+  font-family: "LucideIcons";
+  src: url(https://unpkg.com/lucide-static@latest/font/Lucide.ttf)
+    format("truetype");
+}
 body {
   background-color: #2d3436;
   color: #dfe6e9;
 }
-a {
-  color: #2d3436;
+.file-item-content,
+.folder-item {
+  display: flex;
+  gap: 10px;
+  color: #dfe6e9;
   text-decoration: none;
   font-weight: bold;
+  font-size: 1.2rem;
+}
+.file-item-content {
   font-family: monospace;
-  font-size: 1.2em;
-  background-color: #dfe6e9;
-  border-radius: 5px;
-  padding: 5px;
+}
+
+.files-container,
+.folders-container {
+  list-style-type: none; /* Remove bullets */
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  flex-wrap: wrap;
 }
 li {
   padding-bottom: 10px;
+}
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #636e72;
+  padding-bottom: 5px;
+}
+.navbar-left a,
+.navbar-right a {
+  color: #dfe6e9;
+}
+.header-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.header-btns-container {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #dfe6e9;
+  color: #2d3436;
+  margin: auto;
+  padding: 20px;
+  border: 1px solid #636e72;
+  width: 80%;
+  max-width: 500px;
+  text-align: center;
+  border-radius: 8px;
+}
+
+.close {
+  color: #636e72;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  cursor: pointer;
+}
+.delete-folder-btn:hover {
+  background-color: #d63031;
+  color: #dfe6e9;
 }
