--- a/views/partials/listAllFolderFiles.ejs
+++ b/views/partials/listAllFolderFiles.ejs
@@ -2,7 +2,7 @@
         <ul class="files-container">
             <% files.map((file) => { %>
                 <li class="file-item"> 
-                    <a href=<%=`/file/${file.id}/download`%> class="file-item-content">
+                    <a href=<%=`/file/${file.id}/view`%> class="file-item-content">
                         <i data-lucide="file" class="icon"></i>
                         <%= file.name %>
                     </a> 
