--- a/public/styles.css
+++ b/public/styles.css
@@ -94,10 +94,13 @@ li {
   color: #dfe6e9;
 }
 .file-name-container,
+.file-folder-container,
 .file-size-container,
 .file-date-container {
   display: flex;
   gap: 10px;
+  align-items: center;
+  word-break: break-word;
 }
 .buttons-container {
   display: flex;
@@ -114,6 +117,7 @@ li {
 .delete-file-btn {
   padding: 2.5px 5px;
   display: flex;
+  height: 35px;
   align-items: center;
   gap: 5px;
 }
@@ -130,4 +134,20 @@ li {
 }
 .download-file-btn:hover {
   cursor: pointer;
+}
+.content {
+  max-width: 500px;
+  margin: auto;
+}
+.file-item {
+  word-break: break-word;
+  white-space: normal;
+}
+.icon {
+  min-width: 24px;
+}
+.file-details {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
 }
