--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -7,8 +7,9 @@
     <title>Log In</title>
   </head>
   <body>
-    <h1>Log In</h1>
-    <form action="/login" method="post" class="login-form">
+    <div class="content">
+      <h1>Log In</h1>
+  <form action="/login" method="post" class="login-form">
       <label for="username">Username:</label>
       <input type="text" id="username" name="username" />
 
@@ -16,5 +17,6 @@
       <input type="password" id="password" name="password" />
       <button>Log In</button>
     </form>
+    </div>
   </body>
 </html>
