--- a/views/signupPage.ejs
+++ b/views/signupPage.ejs
@@ -7,8 +7,10 @@
     <title>Sign Up</title>
 </head>
 <body>
+    <%- include("./partials/navbar.ejs") %>
+    <div class="content">
     <h1>Create an Account</h1>
-    <form action="/signup" method="post">
+    <form action="/signup" method="post" class="sign-up-form">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
 
@@ -16,5 +18,6 @@
         <input type="password" name="password" id="password">
         <button type="submit">Create</button>
     </form>
+    </div>
 </body>
 </html>
