--- a/views/filePage.ejs
+++ b/views/filePage.ejs
@@ -52,9 +52,12 @@
             </div>
             <div class="download-file-btn-container">
                 
-                <button class="download-file-btn">
-                    <i data-lucide="file-down" class="icon">Download</i>
+                <form action="download" method="post">
+                    <button class="download-file-btn" type="submit">
+                    <i data-lucide="file-down" class="icon"></i>
                     Download</button>
+                </form>
+                
             </div>
         </div>
         </div>
