--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -7,6 +7,7 @@
     <title>Log In</title>
   </head>
   <body>
+    <%- include("./partials/navbar.ejs") %>
     <div class="content">
       <h1>Log In</h1>
   <form action="/login" method="post" class="login-form">
