--- a/views/filePage.ejs
+++ b/views/filePage.ejs
@@ -46,9 +46,12 @@
     </div>
     <div class="buttons-container">
             <div class="delete-file-btn-container">
-                <button class="delete-file-btn">
-                    <i data-lucide="trash-2" class="icon" ></i>
-                    Delete</button>
+                    <form action="delete" method="post">
+                        <button class="delete-file-btn">
+                            <i data-lucide="trash-2" class="icon" ></i>
+                            Delete</button>
+                    </form>
+                
             </div>
             <div class="download-file-btn-container">
                 
