--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -18,6 +18,10 @@
       <input type="password" id="password" name="password" />
       <button>Log In</button>
     </form>
+    <div class="signup-redirect">
+      Don't have an account?
+        <a href="signup" class="link">Sign Up!</a>
+    </div> 
     </div>
   </body>
 </html>
