--- a/views/signupPage.ejs
+++ b/views/signupPage.ejs
@@ -10,7 +10,7 @@
     <%- include("./partials/navbar.ejs") %>
     <div class="content">
     <h1>Create an Account</h1>
-    <form action="/signup" method="post" class="sign-up-form">
+    <form action="/signup" method="post" class="signup-form">
         <label for="username">Username:</label>
         <input type="text" id="username" name="username">
 
