--- a/views/folderView.ejs
+++ b/views/folderView.ejs
@@ -38,7 +38,7 @@
       <div class="rename-container">
         <form action=<%=`rename`%> method="post">
             <input type="text" id="folder_name" name="folder_name" value=<%= folderName %> >
-            <button type="submit">Update</button>
+            <button type="submit" class="action-btn">Update</button>
         </form>
     </div>
     </div>
