--- a/views/loginPage.ejs
+++ b/views/loginPage.ejs
@@ -16,7 +16,7 @@
 
       <label for="password">Password:</label>
       <input type="password" id="password" name="password" />
-      <button>Log In</button>
+      <button class="action-btn">Log In</button>
     </form>
     <div class="signup-redirect">
       Don't have an account?
