--- a/views/partials/createFolder.ejs
+++ b/views/partials/createFolder.ejs
@@ -2,6 +2,6 @@
   <form action="/folder/new" method="post">
     <label for="folder_name">Folder Name:</label>
     <input type="text" id="folder_name" name="folder_name" required />
-    <button type="submit">New Folder</button>
+    <button type="submit" class="new-folder-btn action-btn">New Folder</button>
   </form>
 </div>
