--- a/views/partials/fileUpload.ejs
+++ b/views/partials/fileUpload.ejs
@@ -1,6 +1,6 @@
 <div class="file-upload-container">
   <form action=<%-`/folder/${folderId}/upload`%> method="post" enctype="multipart/form-data">
-    <input type="file" name="file" id="file" />
-    <button type="submit">Upload</button>
+    <input type="file" name="file" id="file" class="action-btn"/>
+    <button type="submit" class="file-upload-btn action-btn">Upload</button>
   </form>
 </div>
