--- a/views/signupPage.ejs
+++ b/views/signupPage.ejs
@@ -16,8 +16,12 @@
 
         <label for="password">Password:</label>
         <input type="password" name="password" id="password">
-        <button type="submit">Create</button>
+        <button type="submit" class="action-btn">Create</button>
     </form>
+    <div class="login-redirect">
+      Already have an account?
+        <a href="login" class="link">Log In!</a>
+    </div> 
     </div>
 </body>
 </html>
